<resources>
    <string name="app_name">Movies RxJava Example</string>
    <string name="connection_error_message">Connection Problem!!</string>
    <string name="movie_title">Movie</string>
    <string name="movie_tagline">sub title</string>
    <string name="movie_info">Movie Info</string>
    <string name="release_date_tv">Release Date</string>
    <string name="movie_release_year">2019</string>
    <string name="runtime_tv">Runtime</string>
    <string name="movie_runtime">2.3 hr</string>
    <string name="budget_tv">Budget</string>
    <string name="revenue_tv">Revenue</string>
    <string name="movie_revenue">130,000</string>
</resources>